# learning-fast-api-beyond-crud

./: Makefile  pyproject.toml
src/: main.py
src/routes/: book.py
