[project]
name = "learning-fast-api-beyond-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Millenmark",email = "millenmark.dev@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
